--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.1.*",
         "barryvdh/laravel-ide-helper": "^2.1",
         "mockery/mockery": "^0.9.4",
-        "doctrine/dbal": "^2.5"
+        "doctrine/dbal": "^2.5",
+        "symfony/psr-http-message-bridge": "^0.2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
