--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "barryvdh/laravel-ide-helper": "^2.1",
         "mockery/mockery": "^0.9.4",
         "doctrine/dbal": "^2.5",
-        "symfony/psr-http-message-bridge": "^0.2.0"
+        "symfony/psr-http-message-bridge": "^0.2.0",
+        "zendframework/zend-diactoros": "^1.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
