--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "mockery/mockery": "^0.9.4",
         "doctrine/dbal": "^2.5",
         "symfony/psr-http-message-bridge": "^0.2.0",
-        "zendframework/zend-diactoros": "^1.1"
+        "zendframework/zend-diactoros": "^1.1",
+        "laravel/socialite": "^2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
