--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "doctrine/dbal": "^2.5",
         "symfony/psr-http-message-bridge": "^0.2.0",
         "zendframework/zend-diactoros": "^1.1",
-        "laravel/socialite": "^2.0"
+        "laravel/socialite": "^2.0",
+        "barryvdh/laravel-debugbar": "^2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
