composer require --dev squizlabs/php_codesniffer composer global require squizlabs/php_codesniffer vendor/bin/phpcs --standard=phpcs.xml --extensions=php ./

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "phpunit/phpunit": "~4.0",
         "phpspec/phpspec": "~2.1",
         "mockery/mockery": "*",
-        "fabpot/php-cs-fixer": "^1.10"
+        "fabpot/php-cs-fixer": "^1.10",
+        "squizlabs/php_codesniffer": "^2.4"
     },
     "autoload": {
         "classmap": [
