--- a/composer.json
+++ b/composer.json
@@ -8,25 +8,25 @@
   "license": "MIT",
   "type": "project",
   "require": {
-    "php": ">=5.5.9",
-    "laravel/framework": "5.1.*",
-    "barryvdh/laravel-ide-helper": "^2.1",
-    "mockery/mockery": "^0.9.4",
-    "doctrine/dbal": "^2.5",
-    "symfony/psr-http-message-bridge": "^0.2.0",
-    "zendframework/zend-diactoros": "^1.1",
-    "laravel/socialite": "^2.0",
-    "barryvdh/laravel-debugbar": "^2.0",
-    "laravel-ja/comja5": "~1",
-    "filp/whoops": "~1.0"
+    "php": "*",
+    "laravel/framework": "*",
+    "barryvdh/laravel-ide-helper": "*",
+    "mockery/mockery": "*",
+    "doctrine/dbal": "*",
+    "symfony/psr-http-message-bridge": "*",
+    "zendframework/zend-diactoros": "*",
+    "laravel/socialite": "*",
+    "barryvdh/laravel-debugbar": "*",
+    "laravel-ja/comja5": "*",
+    "filp/whoops": "*"
   },
   "require-dev": {
-    "fzaninotto/faker": "~1.4",
-    "phpunit/phpunit": "~4.0",
-    "phpspec/phpspec": "~2.1",
+    "fzaninotto/faker": "*",
+    "phpunit/phpunit": "*",
+    "phpspec/phpspec": "*",
     "mockery/mockery": "*",
-    "fabpot/php-cs-fixer": "^1.10",
-    "squizlabs/php_codesniffer": "^2.4",
+    "friendsofphp/php-cs-fixer": "*",
+    "squizlabs/php_codesniffer": "*",
     "phpmd/phpmd": "@stable"
   },
   "autoload": {
